# api/tag/tagRouter.go
@@ -1,15 +1,25 @@
 package tag
 
-import "github.com/gin-gonic/gin"
+import (
+	"gvb/middleware"
+
+	"github.com/gin-gonic/gin"
+)
 
 func RegisRouter(r *gin.RouterGroup) {
 	tagApi := r.Group("/tag")
 	{
 		tagApi.GET("/list", getList)
+		// 获取热门标签
 		tagApi.GET("/hotlist/:size", getHotList)
-		tagApi.POST("/create", create)
-		tagApi.PUT("/update", update)
-		tagApi.DELETE("/delete/:id", delete)
+		tagManageApi := tagApi.Group("/manage")
+		tagManageApi.Use(middleware.Auth())
+		{
+			tagManageApi.GET("/list", getManageList)
+			tagManageApi.POST("/create", create)
+			tagManageApi.PUT("/update", update)
+			tagManageApi.DELETE("/delete/:id", delete)
+		}
 	}
 
 }
